Fix vertical alignment of send button
Fixed: 399144925
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6298823
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/ai_assistance/components/chatView.css
+++ b/front_end/panels/ai_assistance/components/chatView.css
@@ -200,7 +200,7 @@
 }
 
 .chat-input-button {
-  padding-bottom: 3px;
+  padding-bottom: 2px;
   padding-right: var(--sys-size-3);
 }
 
